fix : display when AI wins

--- a/front/js/components/gameComponent/gameComponent.css
+++ b/front/js/components/gameComponent/gameComponent.css
@@ -90,3 +90,10 @@
 .yellow-piece {
   background-color: rgb(248, 249, 136);
 }
+
+
+#winner{
+  text-align: center;
+  font-size: 30px;
+  color: white;
+}
