fix : relinked the css of some components

--- a/front/js/components/loginPageComponent/loginPageComponent.html
+++ b/front/js/components/loginPageComponent/loginPageComponent.html
@@ -1,5 +1,5 @@
 <style>
-    @import url("loginPageComponent.css");
+    @import url("./js/components/loginPageComponent/loginPageComponent.css");
 </style>
 <div class="container">
     <form>
