--- a/front/js/components/registerPageComponent/registerPageComponent.html
+++ b/front/js/components/registerPageComponent/registerPageComponent.html
@@ -1,5 +1,5 @@
 <style>
-    @import url("registerPageComponent.css");
+    @import url("./js/components/registerPageComponent/registerPageComponent.css");
 </style>
 
 <body>
