--- a/front/js/components/loginPageComponent/loginPageComponent.css
+++ b/front/js/components/loginPageComponent/loginPageComponent.css
@@ -20,7 +20,7 @@ form {
 }
 
 /* Style the input fields */
-input[type="text"],
+input[type="mail"],
 input[type="password"] {
     border: none;
     border-radius: 10px;
@@ -31,7 +31,7 @@ input[type="password"] {
 }
 
 /* Style the submit button */
-input[type="submit"] {
+.sub {
     background-color: #4CAF50;
     color: white;
     cursor: pointer;
