--- a/front/js/components/loginPageComponent/loginPageComponent.html
+++ b/front/js/components/loginPageComponent/loginPageComponent.html
@@ -1,11 +1,20 @@
 <style>
-    @import url("./js/components/loginPageComponent/loginPageComponent.css");
+    @import url("loginPageComponent.css");
 </style>
 <div class="container">
-    <form>
+
+    <form id="loginForm" action="#" onsubmit="login(); return false;">
         <h1>Login</h1>
-        <input type="text" placeholder="Username" required />
-        <input type="password" placeholder="Password" required />
-        <input type="submit" value="Submit">
+        <div class="">
+            <input type="mail" name="mail" id="mail" placeholder="Email" required />
+        </div>
+        <div class="">
+            <input type="password" name="pwd" id="pwd" placeholder="Password" required />
+        </div>
+        <button class="sub" type="submit">login</button>
     </form>
+
+
 </div>
+<script src="loginPageComponent.js"></script>
+
