--- a/front/js/components/loginPageComponent/loginPageComponent.html
+++ b/front/js/components/loginPageComponent/loginPageComponent.html
@@ -3,9 +3,14 @@
 </style>
 <div class="container">
     <form id="loginForm" action="#" onsubmit="login(); return false;">
-        <input type="text" placeholder="Username" required />
-        <input type="password" placeholder="Password" required />
-        <input type="submit" value="Submit">
+        <h1>Login</h1>
+        <div class="">
+            <input type="mail" name="mail" id="mail" placeholder="Email" required />
+        </div>
+        <div class="">
+            <input type="password" name="pwd" id="pwd" placeholder="Password" required />
+        </div>
+        <button class="sub" type="submit">login</button>
     </form>
 </div>
 <script src="loginPageComponent.js"></script>
