--- a/front/js/components/loginPageComponent/loginPageComponent.html
+++ b/front/js/components/loginPageComponent/loginPageComponent.html
@@ -2,7 +2,7 @@
     @import url("./js/components/loginPageComponent/loginPageComponent.css");
 </style>
 <div class="container">
-    <form id="loginForm" action="#" onsubmit="login(); return false;">
+    <form id="loginForm" action="#">
         <h1>Login</h1>
         <div class="">
             <input type="mail" name="mail" id="mail" placeholder="Email" required />
@@ -10,7 +10,7 @@
         <div class="">
             <input type="password" name="pwd" id="pwd" placeholder="Password" required />
         </div>
-        <button class="sub" type="submit">login</button>
+        <button id="login-btn" class="sub" type="submit">login</button>
     </form>
 </div>
 <script src="loginPageComponent.js"></script>
