--- a/front/js/components/registerPageComponent/registerPageComponent.html
+++ b/front/js/components/registerPageComponent/registerPageComponent.html
@@ -4,12 +4,12 @@
 
 <body>
 <h1>Register</h1>
-<form id="signupForm" action="#" onsubmit="signin(); return false;">
+<form id="signupForm" action="#">
     <input type="mail" name="mail" id="mail" placeholder="Email" required>
     <input type="text" name="username" id="username" placeholder="Username" required>
     <input type="password" name="password" id="pwd" placeholder="Password" required>
     <!--<input type="submit" value="Submit">-->
-    <button class="sub" type="submit">Sign up</button>
+    <button id="signup-btn" class="sub" type="submit">Sign up</button>
 </form>
 </body>
 
