--- a/front/js/components/playModeComponent/playModeComponent.html
+++ b/front/js/components/playModeComponent/playModeComponent.html
@@ -14,6 +14,7 @@
     <div class="container">
       <button id="vsComputer">Player VS Computer</button>
       <button id="vsPlayer">Player VS Player</button>
+      <button id="playOnline">Play Online</button>
     </div>
   </div>
 </div>
