--- a/front/js/components/playModeComponent/playModeComponent.html
+++ b/front/js/components/playModeComponent/playModeComponent.html
@@ -1,15 +1,10 @@
 <style>
   @import url("./js/components/playModeComponent/playModeComponent.css");
 </style>
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head> -->
-<!-- <body> -->
+
 <div>
-  <div class="centered">
+    <side-bar-component></side-bar-component>
+    <div class="centered">
     <h1 class="title">Choose your game mode</h1>
     <div class="container">
       <button id="vsComputer">Player VS Computer</button>
@@ -19,4 +14,5 @@
 </div>
 <!-- </body> -->
 <script src="playModeComponent.js"></script>
+<script src="./js/components/sideBarComponent/sideBarComponent.js" type="module"></script>
 <!-- </html> -->
