--- a/front/js/components/test1/test.css
+++ b/front/js/components/test1/test.css
@@ -197,7 +197,9 @@ body.dark .sidebar li a:hover .icon,
 body.dark .sidebar li a:hover .text{
     color: var(--text-color);
 }
-
+.hide {
+    display: none;
+}
 .sidebar .menu-bar{
     height: calc(100% - 55px);
     display: flex;
@@ -206,6 +208,14 @@ body.dark .sidebar li a:hover .text{
     overflow-y: scroll;
 }
 .menu-bar::-webkit-scrollbar{
+    display: none;
+}
+
+
+.sidebar .menu-bar .nav-link li .sub-menu {
+    padding: 6px 6px 14px 80px;
+    margin-top: -10px;
+    background: #1d1b31;
     display: none;
 }
 
