--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -17,9 +17,10 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 450px;
+    width: 60%;
+    height: 60%;
     display: flex;
-    box-shadow: 0 1px 20px 0 rgba(69,90,100,.08);
+    box-shadow: 0 10px 20px 0 rgba(69,90,100,.08);
 }
 
 .wrapper .left{
