add - linked the side bar to the app

--- a/front/js/components/gameChatComponent/gameChatComponent.html
+++ b/front/js/components/gameChatComponent/gameChatComponent.html
@@ -1,5 +1,5 @@
 <style>
-    @import url("gameChatComponent.css");
+    @import url("./js/components/gameChatComponent/gameChatComponent.css");
 </style>
 <div class="chat-box">
     <div class="chat-history">
