--- a/front/js/components/introMenuComponent/introMenuComponent.html
+++ b/front/js/components/introMenuComponent/introMenuComponent.html
@@ -3,7 +3,7 @@
 </style>
 
 <div class="waves active-waves" id="waves">
-  <div class="wrapper">
+  <div class="wrapper" style="width: auto; height: auto;">
     <div class="card-group">
       <div class="big-card card" id="big-card">
         <div class="big-card-wrapper">
