--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -5,9 +5,8 @@
     <ul class="nav-links">
         <li>
             <a href="#">
-                <i class="bx-btn fa fa-bars">
-                    <span class="link_name">username</span>
-                </i>
+                <i class="bx-btn fa fa-bars"></i>
+                <span class="link_name">username</span>
             </a>
         </li>
         <li>
