--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Valorant Profile</title>
-    <link rel="stylesheet" href="profileComponent.css">
-</head>
-<body>
+<style>
+    @import url("./js/components/profileComponent/profileComponent.css");
+</style>
 <div class="container">
     <div class="profile">
         <div class="user-info">
             <img src="" alt="Profile Picture">
             <div class="profile-name">
-                <h1>John Smith</h1>
-                <p>Rank: Diamond 1</p>
+                <h1 id="userName">Name : </h1>
+                <h1 id="email">Email : </h1>
+                <p id="rank">Rank : Diamond 1</p>
             </div>
         </div>
         <div class="stats">
@@ -98,6 +94,3 @@
         </div>
     </div>
 </div>
-<script src="script.js"></script>
-</body>
-</html>
