--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -10,6 +10,12 @@
             </a>
         </li>
         <li>
+            <a href="#" id="profile">
+                <i class='fa fa-user'></i>
+                <span class="link_name">Profile</span>
+            </a>
+        </li>
+        <li>
             <a href="#">
                 <i class='fa fa-home'></i>
                 <span class="link_name">Home</span>
@@ -49,7 +55,7 @@
 </div>
 <!-- <section class="home-section">
     <div class="home-content">
-        
+
     </div>
 </section> -->
 <!-- <script>
