add : linked the friends list and friend request with the front end

--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -23,19 +23,19 @@
                 </a>
                 <i class='fa fa-chevron-down arrow'></i>
             </div>
-            <ul class="sub-menu">
+            <ul class="sub-menu friends">
 
-                <li><a href="#">Friend1</a></li>
+                <!-- <li><a href="#">Friend1</a></li>
                 <li><a href="#">Friend2</a></li>
                 <li><a href="#">Friend3</a></li>
-                <li><a href="#">Friend3</a></li>
+                <li><a href="#">Friend3</a></li> -->
 
             </ul>
         </li>
         <li>
             <a href="#">
                 <i class='fa fa-plus'></i>
-                <input class="link_name" id="searchFriend" type="text" placeholder="Add Friend ...">
+                <input class="link_name" id="input-friend" type="text" placeholder="Add Friend ...">
 
             </a>
         </li>
