--- a/front/js/components/popUpComponent/popUpComponent.css
+++ b/front/js/components/popUpComponent/popUpComponent.css
@@ -1,7 +1,7 @@
 .modal {
     display: none;
-    position: fixed;
-    z-index: 1;
+    position: absolute;
+    z-index: 1000;
     padding-top: 100px;
     left: 0;
     top: 0;
