add : added friend chat

--- a/front/js/components/gameChatComponent/gameChatComponent.html
+++ b/front/js/components/gameChatComponent/gameChatComponent.html
@@ -2,12 +2,12 @@
     @import url("./js/components/gameChatComponent/gameChatComponent.css");
 </style>
 <div class="chat-box">
-    <div class="chat-history">
+    <div class="chat-history" id="message-list">
         <!-- chat messages go here -->
     </div>
     <div class="chat-input">
-        <input type="text" placeholder="Type your message...">
-        <button>Send</button>
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button id="submit-btn">Send</button>
     </div>
 </div>
 <script>
