--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -6,7 +6,7 @@
         <li>
             <a href="#">
                 <i class="bx-btn fa fa-bars"></i>
-                <span class="link_name">username</span>
+                <span class="link_name" id="sidebar-username">Username</span>
             </a>
         </li>
         <li>
@@ -24,11 +24,6 @@
                 <i class='fa fa-chevron-down arrow'></i>
             </div>
             <ul class="sub-menu friends">
-
-                <!-- <li><a href="#">Friend1</a></li>
-                <li><a href="#">Friend2</a></li>
-                <li><a href="#">Friend3</a></li>
-                <li><a href="#">Friend3</a></li> -->
 
             </ul>
         </li>
