--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -28,6 +28,33 @@
             </ul>
         </li>
         <li>
+            <div class="iocn-link">
+                <a href="#">
+                    <i class='fa fa-user'></i>
+                    <span class="link_name">Invitations</span>
+                </a>
+                <i class='fa fa-chevron-down arrow'></i>
+            </div>
+            <ul class="sub-menu">
+                <div class="friend-requests">
+                    <button class="scroll-button left">&lt;</button>
+                    <div class="friend-requests-container">
+                        <ul class="friend-requests-list">
+                            <li class="friend-request">Friend Request 1</li>
+                            <li class="friend-request">Friend Request 2</li>
+                            <li class="friend-request">Friend Request 3</li>
+                            <li class="friend-request">Friend Request 4</li>
+                        </ul>
+                    </div>
+                    <button class="scroll-button right">&gt;</button>
+                </div>
+            </ul>
+
+
+
+        </li>
+
+        <li>
             <a href="#">
                 <i class='fa fa-plus'></i>
                 <input class="link_name" id="input-friend" type="text" placeholder="Add Friend ...">
@@ -44,7 +71,7 @@
 </div>
 <!-- <section class="home-section">
     <div class="home-content">
-        
+
     </div>
 </section> -->
 <!-- <script>
