--- a/front/js/components/gameComponent/gameComponent.html
+++ b/front/js/components/gameComponent/gameComponent.html
@@ -1,7 +1,11 @@
 <style>
   @import url("./js/components/gameComponent/gameComponent.css");
 </style>
+<div class="container">
 <h1 id="winner"></h1>
+
+</div>
+
 <div id="wrapper">
   <table>
   <thead>
