--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="profile">
         <div class="user-info">
-            <img src="" alt="Profile Picture">
+            <img src="../profile-picture.jpg" alt="Profile Picture">
             <div class="profile-name">
                 <h1 id="userName">Name : </h1>
                 <h1 id="email">Email : </h1>
