--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -6,30 +6,26 @@
         <div class="user-info">
             <img src="../profile-picture.jpg" alt="Profile Picture">
             <div class="profile-name">
-                <h1 id="userName">Name : </h1>
-                <h1 id="email">Email : </h1>
+                <h1 id="userName"></h1>
+                <h1 id="email"></h1>
                 <p id="rank">Rank : Diamond 1</p>
             </div>
         </div>
         <div class="stats">
             <div class="stat">
                 <h2>Games</h2>
-                <p id="wins">300</p>
+                <p id="games"></p>
             </div>
             <div class="stat">
-                <h2>Online Wins</h2>
+                <h2>Wins</h2>
                 <p id="online-wins">1500</p>
-            </div>
-            <div class="stat">
-                <h2>AI Wins</h2>
-                <p id="ai-wins">700</p>
             </div>
         </div>
     </div>
     <div class="history">
         <h2 class="history-title">Game History</h2>
         <div class="history-list">
-        <table>
+        <table id="history-table">
             <tr class="history-tab">
                 <th>Against</th>
                 <th>Result</th>
@@ -37,56 +33,6 @@
             </tr>
             <tr>
                 <td>AI</td>
-                <td>Win</td>
-
-            </tr>
-            <tr>
-                <td>PLayer19</td>
-                <td>Loss</td>
-
-            </tr>
-            <tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
-                <td>Win</td>
-
-            </tr><tr>
-                <td>Player64</td>
                 <td>Win</td>
 
             </tr>
