js &  css in progress

--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -4,46 +4,64 @@
 <div class="sidebar close">
     <ul class="nav-links">
         <li>
-            <a href="#">
+            <a href="#" class="alter">
                 <i class="bx-btn fa fa-bars"></i>
                 <span class="link_name" id="sidebar-username">Username</span>
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="#" class="alter" >
                 <i class='fa fa-home'></i>
                 <span class="link_name">Home</span>
             </a>
         </li>
         <li>
             <div class="iocn-link">
-                <a href="#">
+                <a href="#" class="alter">
                     <i class='fa fa-user'></i>
                     <span class="link_name">Friends</span>
                 </a>
                 <i class='fa fa-chevron-down arrow'></i>
             </div>
-            <ul class="sub-menu friends">
+            <ul class="sub-menu friends" id="friends">
 
             </ul>
         </li>
         <li>
             <div class="iocn-link">
-                <a href="#">
+                <a href="#" class="alter">
                     <i class='fa fa-user'></i>
                     <span class="link_name">Invitations</span>
                 </a>
                 <i class='fa fa-chevron-down arrow'></i>
             </div>
-            <ul class="sub-menu">
+            <ul class="sub-menu1">
                 <div class="friend-requests">
                     <button class="scroll-button left">&lt;</button>
                     <div class="friend-requests-container">
                         <ul class="friend-requests-list">
-                            <li class="friend-request">Friend Request 1</li>
-                            <li class="friend-request">Friend Request 2</li>
-                            <li class="friend-request">Friend Request 3</li>
-                            <li class="friend-request">Friend Request 4</li>
+                            <li class="friend-request">
+                                <span class="friend-request-name">Friend Request 1</span>
+                                <span class="friend-request-icons">
+                                <i class="accept-icon fa fa-check"></i>
+                                <i class="decline-icon fa fa-times"></i>
+                                    </span>
+                            </li>
+                            <li class="friend-request"><span class="friend-request-name">Friend Request 1</span>
+                                <span class="friend-request-icons">
+                                <i class="accept-icon fa fa-check"></i>
+                                <i class="decline-icon fa fa-times"></i>
+                                    </span></li>
+                            <li class="friend-request"><span class="friend-request-name">Friend Request 1</span>
+                                <span class="friend-request-icons">
+                                <i class="accept-icon fa fa-check"></i>
+                                <i class="decline-icon fa fa-times"></i>
+                                    </span></li>
+                            <li class="friend-request"><span class="friend-request-name">Friend Request 1</span>
+                                <span class="friend-request-icons">
+                                <i class="accept-icon fa fa-check"></i>
+                                <i class="decline-icon fa fa-times"></i>
+                                    </span></li>
                         </ul>
                     </div>
                     <button class="scroll-button right">&gt;</button>
@@ -55,14 +73,14 @@
         </li>
 
         <li>
-            <a href="#">
+            <a href="#" class="alter">
                 <i class='fa fa-plus'></i>
                 <input class="link_name" id="input-friend" type="text" placeholder="Add Friend ...">
 
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="#" class="alter">
                 <i class="fa fa-sign-out" aria-hidden="true"></i>
                 <span class="link_name">Logout</span>
             </a>
