--- a/front/js/components/sideBarComponent/sideBarComponent.css
+++ b/front/js/components/sideBarComponent/sideBarComponent.css
@@ -90,7 +90,7 @@
 .sidebar.close .nav-links i.arrow{
     display: none;
 }
-.sidebar .nav-links li a{
+.alter{
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -106,7 +106,7 @@
     pointer-events: none;
 }
 .sidebar .nav-links li .sub-menu{
-    padding: 6px 6px 14px 80px;
+    padding: 5px 0px 3px 50px;
     margin-top: -10px;
     background: #1d1b31;
     display: none;
@@ -114,12 +114,12 @@
 .sidebar .nav-links li.showMenu .sub-menu{
     display: block;
 }
-.sidebar .nav-links li .sub-menu a{
+.alter{
     color: #fff;
     font-size: 15px;
     padding: 5px 0;
     white-space: nowrap;
-    opacity: 0.6;
+
     transition: all 0.3s ease;
 }
 .sidebar .nav-links li .sub-menu a:hover{
@@ -263,6 +263,9 @@
     .sidebar.close .nav-links li .sub-menu{
         display: none;
     }
+    .sidebar.close .nav-links li .sub-menu1{
+        display: none;
+    }
     .sidebar{
         width: 78px;
     }
@@ -289,7 +292,7 @@
 .friend-requests-container {
     overflow: hidden;
     flex: 1;
-    margin: 0 10px;
+    margin: 8px;
 }
 
 .friend-requests-list {
@@ -303,7 +306,7 @@
 .friend-request {
     flex: 0 0 auto;
     margin-right: 10px;
-    padding: 5px 10px;
+    padding: 10px 30px;
     background-color: #eee;
     border-radius: 5px;
 }
@@ -322,4 +325,116 @@
 
 .right {
     margin-left: 10px;
+}
+
+
+.sidebar .nav-links li .sub-menu1{
+    padding: 20px 4px 20px 2px;
+    margin-top: -10px;
+    background: #1d1b31;
+    display: none;
+}
+.sidebar .nav-links li.showMenu .sub-menu1{
+    display: block;
+}
+.sidebar .nav-links li .sub-menu1 a{
+    color: #fff;
+    font-size: 15px;
+    padding: 5px 0;
+    white-space: nowrap;
+    opacity: 0.6;
+    transition: all 0.3s ease;
+}
+.sidebar .nav-links li .sub-menu1 a:hover{
+    opacity: 1;
+}
+.sidebar.close .nav-links li .sub-menu1{
+    position: absolute;
+    left: 100%;
+    top: -10px;
+    margin-top: 0;
+    padding: 10px 20px;
+    border-radius: 0 6px 6px 0;
+    opacity: 0;
+    display: block;
+    pointer-events: none;
+    transition: 0s;
+}
+.sidebar.close .nav-links li:hover .sub-menu1{
+    top: 0;
+    opacity: 1;
+    pointer-events: auto;
+    transition: all 0.4s ease;
+}
+.sidebar .nav-links li .sub-menu1 .link_name{
+    display: none;
+}
+
+.sidebar .nav-links li .sub-menu1 li{
+
+}
+
+.sidebar.close .nav-links li .sub-menu1 .link_name{
+    font-size: 18px;
+    opacity: 1;
+    display: block;
+}
+.sidebar .nav-links li .sub-menu1.blank{
+    opacity: 1;
+    pointer-events: auto;
+    padding: 3px 20px 6px 16px;
+    opacity: 0;
+    pointer-events: none;
+}
+.sidebar .nav-links li:hover .sub-menu1.blank{
+    top: 50%;
+    transform: translateY(-50%);
+}
+.friend-requests-list li {
+    padding: 5.5px;
+    margin: 10px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    justify-content: space-between;
+    align-items: center;
+}
+.friend-requests-list li .friend-request-name {
+    margin-right: 0px;
+}
+.friend-requests-list li .friend-request-icons {
+    display: flex;
+    align-items: center;
+}
+.friend-requests-list li .friend-request-icons i {
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0px;
+    transition: color 0.3s ease;
+}
+.friend-requests-list li .friend-request-icons i:hover {
+    color: #555;
+}
+.friend-requests-list li .friend-request-icons .accept-icon {
+    color: green;
+}
+.friend-requests-list li .friend-request-icons .decline-icon {
+    color: red;
+}
+.friend{
+    color: #fff;
+    font-size: 17px;
+    padding: 0px 0px 1px 0px ;
+    white-space: nowrap;
+    opacity: 0.6;
+    transition: all 0.3s ease;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-wrap: nowrap;
+    text-decoration: none;
+}
+.friend-request{
+    display: flex;
+    flex-direction: column;
+
 }
