--- a/front/js/components/gameComponent/gameComponent.html
+++ b/front/js/components/gameComponent/gameComponent.html
@@ -5,6 +5,10 @@
 <h1 id="winner"></h1>
 
 </div>
+<div class="turn">
+  <h1>Turn : </h1>
+  <h1 id="turn"></h1>
+</div>
 
 <div id="wrapper">
   <table>
